# tree-sitter-tempo

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.tempo  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-tempo.pc.in
bindings/c/tree_sitter/: tree-sitter-tempo.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tempo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTempoTests/: TreeSitterTempoTests.swift
queries/: locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: functions.txt
